index.css
html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}

/* ========================= new code ========================== */




/* ========================= media start ========================== */

* {
    border: 1px solid black;
}

top-section {
    display:flex;
    flex-direction: row;
    justify-content: center; /*why doesn't this center it by itself? I had to do margin-right and margin-left auto to center...*/
    margin-top: 2em;
    margin-right: auto;
    margin-left: auto;
    width:80%;
}

image-container {
    display: flex;
    justify-content: center;
    margin-left: auto;
    margin-right: auto;
}

top-section-information {
    display:flex;
    flex-direction: column;
    padding-left: 3em;
}


top-section button {
    display: flex;
    justify-content: center;
    width:10em;
    height: 3em;
    line-height:3em;
}

.about-me-section {
    display: flex;

    text-align: center;
    width: 80%;
}

@media (max-width:800px) {
    body {
        background-color: pink;
    }

    top-section {
        display:flex;
        flex-direction: column;
        justify-content: center; /*why doesn't this center it by itself? I had to do margin-right and margin-left auto to center...*/
        margin-top: 2em;
        margin-right: auto;
        margin-left: auto;
        width:80%;
    }

    top-section-information {
        padding-left: 0em;
    }
    
    image-container {
        display: flex;
        justify-content: center;
    }

    top-section h2 {
        display: flex;
        justify-content: center;
    }
    
    top-section button {
        display: flex;
        justify-content: center; /*why doesn't this center it by itself? I had to do margin-right and margin-left auto to center...*/
        width:10em;
        height: 3em;
        line-height:3em;
        margin: auto; 
    }
    
    .about-me-section {
        display: flex;
        justify-content: center;
        text-align: center;
        margin: auto;
        width: 80%;
    }
}


@media (max-width:500px) {
    body {
        background-color:forestgreen;
    }
}


/* ========================= media end ========================== */



about-marc {
    margin-top:1000px;
}

a:link {
    text-decoration: none;
    color:black;
  }
  
  
  a:visited {
    text-decoration: none;
    color:black;
  }

.button:hover {
    background-color:black;
    color:white;
}

.header-area {
    background-color: gray;
    padding:5%;
    display:flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

h1 {
    font-size:2em;
    margin-top: .5em;
    margin-bottom: .5em;
}

.toolbar {
    display:flex;
    margin-left:1em;
}

.button {
    border: 1px black solid;
    padding: 1em;
    font-size: 1em;
    background-color: lightgray;
    width:5em;
    text-align:center;
}



.about-section {
    display:flex;
    justify-content: center;
    margin: 1em auto;
    width:864px;
    height:14em;
}

.about-details {
    margin-left:3em;
}

h2 {
    font-size:1.5em;
    margin-top: .5em;
    margin-bottom: .5em;
}

p {
    padding-top:1em;
    padding-bottom:1mem;
}

.gallery-section img {
    margin:.5em;
    width:100%
}

.gallery-row {
    display:flex;
    flex-wrap:wrap;
    margin-bottom:2em;
    justify-content: center;
}

.project-item {
    display:flex;
    flex-direction:column;
}

.project-item p {
    text-align:center;
}

.footer {
    display:flex;
    align-items:center;
    justify-content: center;
    flex-direction:row;
    height:15em;
    width:100%;
    background-color: gray;
}

.contact-section {
    display:flex;
    flex-flow: column;
    align-items: center;
}

.contact-section h2 {
    padding:.5em;
}

